--- a/index.html
+++ b/index.html
@@ -91,16 +91,19 @@
                     </div>
                 </div>
                 <div class="card question">
-                    <img src="./assets/img/question.jpg" alt="question">
-                    <div class="info-content">
-                        <h3 class="info-title">
-                            <a href="question-page.html">Hỏi đáp pháp lý</a>
-                        </h3>
-                        <p class="info-desc desc">
-                            Chuyên mục giải đáp thắc mắc của người dân và doanh nghiệp về các vấn đề pháp luật đất đai,
-                            với sự tham gia của chuyên gia pháp lý.
-                        </p>
-                    </div>
+                    <a href="question-page.html">
+                        <img src="./assets/img/question.jpg" alt="question">
+                        <div class="info-content">
+                            <h3 class="info-title">
+                                <a href="question-page.html">Hỏi đáp pháp lý</a>
+                            </h3>
+                            <p class="info-desc desc">
+                                Chuyên mục giải đáp thắc mắc của người dân và doanh nghiệp về các vấn đề pháp luật đất
+                                đai,
+                                với sự tham gia của chuyên gia pháp lý.
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
