done introduce page

--- a/question-page.html
+++ b/question-page.html
@@ -28,10 +28,10 @@
                         <a href="index.html#main">Tra cứu thông tin</a>
                     </li>
                     <li>
-                        <a href="#!">Hướng dẫn thủ tục</a>
+                        <a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a>
                     </li>
                     <li>
-                        <a href="#!">Hỏi đáp</a>
+                        <a href="question-page.html">Hỏi đáp</a>
                     </li>
                 </ul>
                 <!-- Brand -->
@@ -64,7 +64,7 @@
                     Trả lời chi tiết
                 </h2>
                 <div class="detail-answer card-style">
-                    
+
                 </div>
             </section>
 
@@ -95,6 +95,7 @@
                     pháp luật”
                     do trường Đại học Luật Hà Nội tổ chức nhằm góp phần tuyên
                     truyền và phổ biến pháp luật. </p>
+                <a href="introduce-page.html" class="team">Thành viên dự án</a>
             </div>
             <div class="footer-contact">
                 <h3>Liên hệ</h3>
@@ -105,10 +106,10 @@
             <div class="footer-links">
                 <h3>Liên kết</h3>
                 <ul>
-                    <li><a href="#!">Trang chủ</a></li>
-                    <li><a href="#!">Tra cứu thông tin</a></li>
-                    <li><a href="#!">Hướng dẫn thủ tục</a></li>
-                    <li><a href="#!">Hỏi đáp pháp lý</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
+                    <li><a href="index.html#main">Tra cứu thông tin</a></li>
+                    <li><a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a></li>
+                    <li><a href="question-page.html">Hỏi đáp pháp lý</a></li>
                 </ul>
             </div>
         </div>
