--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
                 <!-- Navigation -->
                 <ul>
                     <li>
-                        <a href="#!">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="#main">Tra cứu thông tin</a>
+                        <a href="index.html#main">Tra cứu thông tin</a>
+                    </li>
+                    <li>
+                        <a href="vbpl-page.html">Văn bản pháp luật</a>
                     </li>
                     <li>
                         <a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a>
                     </li>
                     <li>
-                        <a href="question-page.html">Hỏi đáp</a>
+                        <a href="question-page.html">Hỏi đáp pháp lý</a>
                     </li>
                 </ul>
                 <!-- Brand -->
@@ -79,6 +82,19 @@
                     <div class="results" id="results">
                     </div>
                 </div>
+                <div class="card vbpl">
+                    <a href="vbpl-page.html">
+                        <img src="./assets/img/vbpl.jpg" alt="question">
+                        <div class="info-content">
+                            <h3 class="info-title">
+                                <a href="vbpl-page.html">Văn bản pháp luật</a>
+                            </h3>
+                            <p class="info-desc desc">
+                                Chuyên mục cung cấp sự giải đáp chi tiết về nhưng điều luật quan trọng về đất đai mới được cập nhật.
+                            </p>
+                        </div>
+                    </a>
+                </div>
                 <div class="card instruc">
                     <img src="./assets/img/instruction.jpg" alt="instruction">
                     <div class="info-content">
@@ -105,6 +121,7 @@
                         </div>
                     </a>
                 </div>
+                
             </div>
         </section>
     </main>
@@ -131,8 +148,10 @@
                 <ul>
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="index.html#main">Tra cứu thông tin</a></li>
+                    <li><a href="vbpl-page.html">Văn bản pháp luật</a></li>
                     <li><a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a></li>
                     <li><a href="question-page.html">Hỏi đáp pháp lý</a></li>
+                    
                 </ul>
             </div>
         </div>
