--- a/question-page.html
+++ b/question-page.html
@@ -28,10 +28,13 @@
                         <a href="index.html#main">Tra cứu thông tin</a>
                     </li>
                     <li>
+                        <a href="vbpl-page.html">Văn bản pháp luật</a>
+                    </li>
+                    <li>
                         <a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a>
                     </li>
                     <li>
-                        <a href="question-page.html">Hỏi đáp</a>
+                        <a href="question-page.html">Hỏi đáp pháp lý</a>
                     </li>
                 </ul>
                 <!-- Brand -->
@@ -108,6 +111,7 @@
                 <ul>
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="index.html#main">Tra cứu thông tin</a></li>
+                    <li><a href="vbpl-page.html">Văn bản pháp luật</a></li>
                     <li><a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a></li>
                     <li><a href="question-page.html">Hỏi đáp pháp lý</a></li>
                 </ul>
