--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <div class="content">
             <nav class="navbar">
                 <!-- Navigation -->
+                <!-- Menu Toggle -->
+                <button class="menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul>
                     <li>
                         <a href="index.html">Trang chủ</a>
@@ -36,6 +38,9 @@
                     </li>
                 </ul>
                 <!-- Brand -->
+                <div class="brand">
+                    <a href="#!">Thông tin đất đai</a>
+                </div>
             </nav>
             <!-- Hero part -->
             <div class="hero">
