--- a/introduce-page.html
+++ b/introduce-page.html
@@ -17,6 +17,8 @@
         <div class="content">
             <nav class="navbar">
                 <!-- Navigation -->
+                <!-- Menu Toggle -->
+                <button class="menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul>
                     <li>
                         <a href="index.html">Trang chủ</a>
@@ -35,6 +37,9 @@
                     </li>
                 </ul>
                 <!-- Brand -->
+                <div class="brand">
+                    <a href="#!">Thông tin đất đai</a>
+                </div>
             </nav>
         </div>
     </header>
@@ -121,5 +126,6 @@
             <p>&copy; 2025 Thông tin đất đai. Mọi quyền được bảo lưu.</p>
         </div>
     </footer>
+    <script src="script-introduce.js"></script>
 </body>
 </html>
