--- a/question-page.html
+++ b/question-page.html
@@ -20,6 +20,8 @@
         <div class="content">
             <nav class="navbar">
                 <!-- Navigation -->
+                <!-- Menu Toggle -->
+                <button class="menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul>
                     <li>
                         <a href="index.html">Trang chủ</a>
@@ -38,6 +40,9 @@
                     </li>
                 </ul>
                 <!-- Brand -->
+                <div class="brand">
+                    <a href="#!">Thông tin đất đai</a>
+                </div>
             </nav>
         </div>
     </header>
