--- a/vbpl-page.html
+++ b/vbpl-page.html
@@ -20,6 +20,8 @@
         <div class="content">
             <nav class="navbar">
                 <!-- Navigation -->
+                <!-- Menu Toggle -->
+                <button class="menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul>
                     <li>
                         <a href="index.html">Trang chủ</a>
@@ -31,20 +33,27 @@
                         <a href="vbpl-page.html">Văn bản pháp luật</a>
                     </li>
                     <li>
-                        <a
-                            href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng
-                            dẫn thủ tục</a>
+                        <a href="https://docs.google.com/document/d/1hzQAMvkHB7wY5bDoYjXfYhu8C_z6M8sQN4QOfZnBDLs/edit?usp=sharing">Hướng dẫn thủ tục</a>
                     </li>
                     <li>
                         <a href="question-page.html">Hỏi đáp pháp lý</a>
                     </li>
                 </ul>
                 <!-- Brand -->
+                <div class="brand">
+                    <a href="#!">Thông tin đất đai</a>
+                </div>
             </nav>
         </div>
     </header>
 
-    <main class="main ">
+    <main class="main">
+        <div class="line-path-div">
+            <div class="line-path">
+                <i class="fas fa-home"></i>
+                <span>/ Hỏi đáp pháp lý</span>
+            </div>
+        </div>
         <div class="content card-style">
             <h1 class="title">
                 Văn bản pháp luật
