--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="switch-label">VN</span>
                         <label class="switch">
                             <input type="checkbox" id="languageSwitch">
-                            <span class="slider"></span>
+                            <span class="slider round"></span>
                         </label>
                         <span class="switch-label">EN</span>
                     </div>
