fix address and fix img introduce

--- a/introduce-page.html
+++ b/introduce-page.html
@@ -111,8 +111,7 @@
                 <h3 id="footer-contact-title">Liên hệ</h3> <!-- Added ID -->
                 <p>Email: <a href="mailto:phanngocnhi4733@gmail.com.">phanngocnhi4733@gmail.com.</a></p>
                 <p><span id="footer-phone-label">Điện thoại</span>: 0889020766</p> <!-- Added ID -->
-                <p><span id="footer-address-label">Địa chỉ</span>: Trường Đại học Luật Hà Nội, 87 Đ. Nguyễn Chí Thanh,
-                    Láng Thượng, Đống Đa, Hà Nội</p> <!-- Added ID -->
+                <p><span id="footer-address-label">Địa chỉ</span>: Trường Đại học Luật Hà Nội, 87 Đường Nguyễn Chí Thanh, Láng Thượng, Đống Đa, Hà Nội</p> <!-- Added ID -->
             </div>
             <div class="footer-links">
                 <h3 id="footer-links-title">Liên kết</h3> <!-- Added ID -->
