--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     THÔNG TIN ĐẤT ĐAI
                 </h1>
                 <p class="desc" id="hero-desc"> <!-- Added ID -->
-                    Trang web phổ biến pháp luật công khai, minh bạch đất đai cung cấp thông tin pháp lý rõ ràng, dễ
+                    Trang web phổ biến pháp luật công khai, minh bạch đất đai, cung cấp thông tin pháp lý rõ ràng, dễ
                     tiếp cận về các quy định liên quan đến quản lý, sử dụng và giao dịch đất đai.
                 </p>
                 <div class="find-more">
