--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -28,7 +31,7 @@
                         <li><a href="question-page.html" id="nav-qa">Hỏi đáp pháp lý</a></li>
                     </ul>
                 </div>
-            
+
                 <div class="right-group">
                     <div class="brand">
                         <a href="#!" id="brand-text">Thông tin đất đai</a>
@@ -158,8 +161,9 @@
             <div class="footer-contact">
                 <h3 id="footer-contact-title">Liên hệ</h3> <!-- Added ID -->
                 <p>Email: <a href="mailto:phanngocnhi4733@gmail.com.">phanngocnhi4733@gmail.com.</a></p>
-                <p><span id="footer-phone-label">Điện thoại</span>: 0889020766</p> <!-- Added ID -->
-                <p><span id="footer-address-label">Địa chỉ</span>: Trường Đại học Luật Hà Nội, 87 Đường Nguyễn Chí Thanh, Láng Thượng, Đống Đa, Hà Nội</p> <!-- Added ID -->
+                <p><span id="footer-phone-label">Điện thoại</span>: 0889020766.</p> <!-- Added ID -->
+                <p><span id="footer-address-label">Địa chỉ</span>: Trường Đại học Luật Hà Nội, 87 Đường Nguyễn Chí
+                    Thanh, Phường Láng Thượng, Quận Đống Đa, Hà Nội.</p> <!-- Added ID -->
             </div>
             <div class="footer-links">
                 <h3 id="footer-links-title">Liên kết</h3> <!-- Added ID -->
