--- a/introduce-page.html
+++ b/introduce-page.html
@@ -118,6 +118,10 @@
                 <p><span id="footer-phone-label">Điện thoại</span>: 0889020766</p> <!-- Added ID -->
                 <p><span id="footer-address-label">Địa chỉ</span>: Trường Đại học Luật Hà Nội, 87 Đường Nguyễn Chí
                     Thanh, Phường Láng Thượng, Quận Đống Đa, Hà Nội.</p> <!-- Added ID -->
+                <div class="logo">
+                    <img src="./assets/img/IMG_3465.JPG" alt="">
+                    <img src="./assets/img/IMG_3466.JPG" alt="">
+                </div>
             </div>
             <div class="footer-links">
                 <h3 id="footer-links-title">Liên kết</h3> <!-- Added ID -->
